--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -127,7 +127,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>Cabarrus County - Casehead Search</h1>
+        <h1>Cabarrus County - Caseworker Search</h1>
     </header>
     <div class="container">
         <div class="search-section">
